css/default.css
/* ... */
.sourceCode.collapse > .disclosure-button .part.top .label,
.sourceCode.collapse > .disclosure-button .part.top .icon {
    margin-top: 1px;
}
.sourceCode.collapse > .disclosure-button .part.top .icon {
	margin-right: 1px;
}
.sourceCode.collapse > .disclosure-button .part.bottom .label {
    margin-bottom: 1px;
}

/**********************/
/*  Collapsible tables.
 */

.table-wrapper.collapse.expanded-not {
    overflow: hidden;
    margin-left: 0;
    padding: 0;
}

.table-wrapper.collapse > .disclosure-button .part.top .label,
.table-wrapper.collapse > .disclosure-button .part.top .icon {
    margin-top: 2px;
}

.table-wrapper.collapse.expanded .table {
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

/****************************/
/*  Collapses in blockquotes.
 */

blockquote .collapse {
	--collapse-blockquote-side-padding: 1.25em;
	--collapse-blockquote-bottom-padding: 1em;
}
@media all and (max-width: 649px) {
	blockquote .collapse {
		--collapse-blockquote-side-padding: 1em;
		--collapse-blockquote-bottom-padding: 0.75em;
	}
}

blockquote .collapse,
blockquote .collapse.expanded {
    padding-left: var(--collapse-blockquote-side-padding);
    padding-right: var(--collapse-blockquote-side-padding);
    margin-left: calc(-1 * var(--collapse-blockquote-side-padding));
    margin-right: calc(-1 * var(--collapse-blockquote-side-padding));
}
.markdownBody blockquote > .collapse:last-child {
    margin-bottom: calc(-1 * var(--collapse-blockquote-bottom-padding));
}

blockquote .collapse::before {
    background-color: var(--GW-blockquote-background-color);
}

blockquote .collapse > .disclosure-button {
	--collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-color);
}
blockquote .collapse > .disclosure-button:hover {
	--collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-hover-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-hover-color);
}

blockquote .collapse.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}
blockquote .collapse.has-abstract.expanded-not > .disclosure-button .part::before {
    opacity: 1.0;
}

/*******************************************************************/
/*  “Aux links” in link bibliographies, directory indexes, and other
	transcluded (rather than pop-framed) annotations.
 */

.annotation .collapse.aux-links-container {
	--collapse-toggle-top-height: 2.25rem;

    border-top: 1px solid var(--GW-TOC-border-color);
	margin-bottom: 0;
}
.annotation p + .collapse.aux-links-container {
    margin-top: 1.25em;
}
.annotation .collapse.aux-links-container + .collapse.aux-links-container {
    margin-top: 0;
}
.annotation .TOC + .collapse.aux-links-container {
    margin-top: 0.75em;
}

/*************************/
/*	Per-section backlinks.
 */
.collapse.section-backlinks-container {
	--collapse-toggle-top-height: 2.75rem;

	margin-top: 1.25em;
	margin-bottom: 2em;
	margin-left: calc(-1 * var(--collapse-left-offset));
    padding-left: var(--collapse-left-offset);
}

.collapse.section-backlinks-container.expanded-not > .disclosure-button .part::before {
	opacity: 0.70;
}

.collapse.section-backlinks-container .section-backlinks {
	margin-top: 0.5em;
}

.collapse.section-backlinks-container .section-backlinks > ul {
	margin-top: 0.75em;
	margin-bottom: 0.5em;
}
.collapse.section-backlinks-container .section-backlinks > ul > li:last-child > blockquote {
	margin-bottom: 0.5em;
}

/**********************************************************************/
/*	“Bare content” collapses (not a section, not code, not table, etc.)
 */

.collapse.bare-content.expanded-not > .collapse-content-wrapper > p {
	margin-left: 0.375em;
	margin-right: 0.375em;
}
.collapse.bare-content.expanded-not > .collapse-content-wrapper > p:first-child {
	margin-top: 0.125em;
}

/****************************************************/
/*	Miscellaneous/general content in collapse blocks.
 */
.collapse.expanded > .collapse-content-wrapper > :last-child {
	margin-bottom: 0.5em;
}
.collapse.no-abstract.expanded > .collapse-content-wrapper > p:first-child {
	margin-top: 0.5em;
}

.collapse section > :first-child {
	margin-left: 0;
}

/***********************/
/*  Collapse edge cases.
 */

li > .collapse > .collapse-content-wrapper > ul {
	margin-top: 0.125em;
}
li > .collapse.expanded > .collapse-content-wrapper > ul {
	margin-top: 0.5em;
}

.collapse [class^='horizontal-rule'] {
    clear: none;
}

body.indented .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
    text-indent: 2.5em;
}
body.indented-not .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
    margin-top: 1em;
}
@media all and (max-width: 649px) {
    body.indented .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
        text-indent: 1.75em;
    }
    body.indented-not .abstract-collapse + .collapse-content-wrapper > p:not([class^='drop-cap']):first-child {
        margin-top: 1em;
    }
}

.footnote .collapse {
	--collapse-left-offset: 0.75em;
}


/************/
/* HEADINGS */
/************/

/* HEADER H1-6 HIERARCHY */
h1, h2, h3, h4, h5, h6 {
    margin: 1.25em 0 0.5em -0.75rem;
    font-weight: bold;
    position: relative;
}
@media all and (max-width: 649px) {
    h1, h2, h3, h4, h5, h6 {
        margin: 1.25em 0 0.5em 0;
    }
}

/*=-------------------------=*/
/*= Inline code in headings =*/
/*=-------------------------=*/

h1 code,
h2 code,
h3 code,
h4 code,
h5 code,
h6 code {
    border: none;
    padding: 0;
    background-color: inherit;
    font-size: inherit;
    font-weight: normal;
}
/* ... */

