Fix small layout bug with some lists

--- a/css/default.css
+++ b/css/default.css
@@ -512,6 +512,9 @@ blockquote .collapse.has-abstract.expanded-not > .disclosure-button .part::befor
 	margin-top: 0.5em;
 }
 
+.collapse.section-backlinks-container .section-backlinks > .list-heading {
+	margin-top: 0;
+}
 .collapse.section-backlinks-container .section-backlinks > ul {
 	margin-top: 0.75em;
 	margin-bottom: 0.5em;
@@ -1154,6 +1157,10 @@ body.index .markdownBody .section-link-list ul > li::before {
 .markdownBody li > ul + p,
 .markdownBody li > ol + p {
     margin-top: 1em;
+}
+
+.markdownBody .aux-links-list .list-heading {
+	margin-top: 0;
 }
 
 /***********/
